--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar">
 <head>
@@ -39,19 +38,16 @@ body {
   margin-top:20px; 
   border:none; 
   border-radius:6px; 
-  background:#0d47a1; 
+  background:#e91e63; 
   color:#fff; 
   cursor:pointer; 
   font-weight:bold;
 }
+.sidebar button:hover { background:#d81b60; }
 
-/* زر إضافة فيديو */
-#showFormBtn {
-  background-color: #e91e63;
-  color:#fff;
-  display:none; /* مخفي للزائر */
-}
-#showFormBtn:hover { background-color:#d81b60; }
+/* زر خروج الأدمين */
+#logoutAdminBtn { display:none; background:#ff5722; }
+#logoutAdminBtn:hover { background:#e64a19; }
 
 /* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
@@ -70,24 +66,9 @@ header {
   box-shadow: 0 8px 25px rgba(0,0,0,0.2);
   border: 2px solid #1976d2;
 }
-header img {
-  height:140px;
-  width:auto;
-  border-radius:12px;
-  border:3px solid #fff;
-  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-}
-header div h1 {
-  font-size:2.8rem;
-  color:#fff;
-  margin-bottom:8px;
-  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
-}
-header div p {
-  font-size:1.3rem;
-  color:#e0f7fa;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
-}
+header img { height:140px; width:auto; border-radius:12px; border:3px solid #fff; box-shadow: 0 4px 15px rgba(0,0,0,0.15); }
+header div h1 { font-size:2.8rem; color:#fff; margin-bottom:8px; text-shadow: 1px 1px 4px rgba(0,0,0,0.4); }
+header div p { font-size:1.3rem; color:#e0f7fa; text-shadow: 1px 1px 3px rgba(0,0,0,0.3); }
 
 /* Sections */
 section { margin-bottom:50px; }
@@ -110,31 +91,14 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
 .videoBox iframe { width:100%; height:200px; border-radius:10px; }
 
 /* Admin Buttons */
-.videoButtons {
-  display:flex;
-  justify-content:center;
-  gap:10px;
-  margin-top:5px;
-}
-.videoButtons button {
-  padding:5px 10px;
-  border:none;
-  border-radius:5px;
-  cursor:pointer;
-  font-size:0.8rem;
-}
+.videoButtons { display:flex; justify-content:center; gap:10px; margin-top:5px; }
+.videoButtons button { padding:5px 10px; border:none; border-radius:5px; cursor:pointer; font-size:0.8rem; }
 .deleteBtn { background:red; color:#fff; }
 .editBtn { background:#1976d2; color:#fff; }
 
 /* PDF Resources */
 .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
-.pdfBox {
-  background: #d0e8ff;
-  padding:15px;
-  border-radius:12px;
-  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-  text-align:center;
-}
+.pdfBox { background: #d0e8ff; padding:15px; border-radius:12px; box-shadow: 0 6px 15px rgba(0,0,0,0.1); text-align:center; }
 .pdfBox h3 { color:#0d47a1; margin-bottom:8px; font-size:1.1rem; }
 .pdfBox a { display:inline-block; padding:8px 12px; background:#1976d2; color:#fff; border-radius:6px; text-decoration:none; transition: background 0.3s; }
 .pdfBox a:hover { background:#0b3d91; }
@@ -149,52 +113,7 @@ footer a { color:#1976d2; text-decoration:none; }
 #videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
 
 /* Load More Button */
-#loadMoreBtn {
-  display:block;
-  margin:20px auto 50px;
-  padding:10px 20px;
-  border:none;
-  border-radius:6px;
-  background:#1976d2;
-  color:#fff;
-  font-weight:bold;
-  cursor:pointer;
-  font-size:1rem;
-}
-
-/* Admin Login Form */
-#adminLogin {
-  position:fixed;
-  top:0; left:0; right:0; bottom:0;
-  background:rgba(0,0,0,0.7);
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  z-index:1000;
-}
-#adminLogin div {
-  background:#fff;
-  padding:30px;
-  border-radius:10px;
-  text-align:center;
-  width:300px;
-}
-#adminLogin input {
-  width:100%;
-  padding:8px;
-  margin:10px 0;
-  border-radius:5px;
-  border:1px solid #ccc;
-}
-#adminLogin button {
-  padding:8px 12px;
-  border:none;
-  border-radius:5px;
-  background:#0d47a1;
-  color:#fff;
-  cursor:pointer;
-  font-weight:bold;
-}
+#loadMoreBtn { display:block; margin:20px auto 50px; padding:10px 20px; border:none; border-radius:6px; background:#1976d2; color:#fff; font-weight:bold; cursor:pointer; font-size:1rem; }
 
 /* Responsive */
 @media(max-width:992px){
@@ -215,8 +134,11 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#pdfs">PDF</a>
   <a href="#contact">Contact Us</a>
 
-  <!-- زر لإظهار الفورم لإضافة فيديو -->
+  <!-- زر إضافة فيديو -->
   <button id="showFormBtn">إضافة فيديو جديد</button>
+
+  <!-- زر خروج الأدمين -->
+  <button id="logoutAdminBtn">خروج الأدمين</button>
 
   <!-- الفورم لإضافة الفيديو -->
   <div id="videoForm">
@@ -237,7 +159,7 @@ footer a { color:#1976d2; text-decoration:none; }
 
 <section id="about">
   <h2>About This Website</h2>
-  <p>This website teaches <strong>Egyptian Spoken Arabic</strong> through engaging videos and downloadable PDFs. Learn practical phrases, pronunciation, and everyday conversations, suitable for beginners and advanced learners alike..</p>
+  <p>This website teaches <strong>Egyptian Spoken Arabic</strong> through engaging videos and downloadable PDFs. Learn practical phrases, pronunciation, and everyday conversations, suitable for beginners and advanced learners alike.</p>
 </section>
 
 <section id="videos">
@@ -262,7 +184,7 @@ footer a { color:#1976d2; text-decoration:none; }
 
 <section id="contact">
   <h2>Contact Us</h2>
-  <p>YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
+  <p>YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br/>
   Email: spokenarabicnow@gmail.com</p>
 </section>
 
@@ -270,35 +192,37 @@ footer a { color:#1976d2; text-decoration:none; }
   <p>&copy; 2026 Spoken Arabic Now. All rights reserved.</p>
 </footer>
 
-<!-- Admin Login Modal -->
-<div id="adminLogin">
-  <div>
-    <h3>Login as Admin</h3>
-    <input type="password" id="adminPass" placeholder="Enter Password">
-    <button onclick="checkAdmin()">Login</button>
-  </div>
-</div>
-
 <script>
-const ADMIN_PASSWORD = "1234"; 
-let isAdmin = sessionStorage.getItem('admin') === 'true';
+const ADMIN_PASSWORD = "1234";
+let isAdmin = sessionStorage.getItem("isAdmin") === "true";
 
 const showFormBtn = document.getElementById('showFormBtn');
+const logoutAdminBtn = document.getElementById('logoutAdminBtn');
 const videoForm = document.getElementById('videoForm');
 const addVideoBtn = document.getElementById('addVideoBtn');
 const videoTitleInput = document.getElementById('videoTitle');
 const videoURLInput = document.getElementById('videoURL');
 const videoList = document.getElementById('videoList');
 const loadMoreBtn = document.getElementById('loadMoreBtn');
-const adminLogin = document.getElementById('adminLogin');
 
 let videos = JSON.parse(localStorage.getItem('videos')) || [];
 let visibleCount = 6;
 
+// تحديث واجهة الأدمين
+function updateAdminUI() {
+  if(isAdmin){
+    showFormBtn.style.display = "block";
+    logoutAdminBtn.style.display = "block";
+  } else {
+    showFormBtn.style.display = "none";
+    logoutAdminBtn.style.display = "none";
+    videoForm.style.display = "none";
+  }
+}
+
 // إنشاء عنصر الفيديو
 function createVideoElement(video, index) {
   const container = document.createElement('div');
-
   const title = document.createElement('div');
   title.classList.add('videoTitle');
   title.textContent = video.title;
@@ -362,15 +286,32 @@ loadMoreBtn.addEventListener('click', ()=> {
   renderVideos();
 });
 
-// إنشاء الفيديوهات عند تحميل الصفحة
-renderVideos();
-
-// عرض الفورم
+// زر إضافة فيديو
 showFormBtn.addEventListener('click', () => {
-  videoForm.style.display = videoForm.style.display === "flex" ? "none" : "flex";
+  if(!isAdmin){
+    const pass = prompt("أدخل كلمة مرور الأدمين:");
+    if(pass === ADMIN_PASSWORD){
+      isAdmin = true;
+      sessionStorage.setItem("isAdmin","true");
+      updateAdminUI();
+      renderVideos();
+    } else {
+      alert("كلمة المرور غير صحيحة!");
+    }
+  } else {
+    videoForm.style.display = videoForm.style.display === "flex" ? "none" : "flex";
+  }
 });
 
-// إضافة فيديو
+// زر خروج الأدمين
+logoutAdminBtn.addEventListener('click', ()=>{
+  isAdmin = false;
+  sessionStorage.removeItem("isAdmin");
+  updateAdminUI();
+  renderVideos();
+});
+
+// إضافة فيديو جديد
 addVideoBtn.addEventListener('click', () => {
   const title = videoTitleInput.value.trim();
   const url = videoURLInput.value.trim();
@@ -385,36 +326,21 @@ addVideoBtn.addEventListener('click', () => {
   const newVideo = { title, url, id: videoId };
   videos.push(newVideo);
   localStorage.setItem('videos', JSON.stringify(videos));
-
   videoTitleInput.value = "";
   videoURLInput.value = "";
-
   renderVideos();
 });
 
-// التحقق من كلمة المرور
-function checkAdmin() {
-  const pass = document.getElementById('adminPass').value;
-  if(pass === ADMIN_PASSWORD){
-    sessionStorage.setItem('admin', 'true');
-    isAdmin = true;
-    adminLogin.style.display = 'none';
-    showFormBtn.style.display = 'block';
-    renderVideos();
-  } else {
-    alert("كلمة المرور غير صحيحة");
-  }
-}
-
-// عند تحميل الصفحة
-if(isAdmin){
-  adminLogin.style.display = 'none';
-  showFormBtn.style.display = 'block';
-}
+// تهيئة الصفحة
+updateAdminUI();
+renderVideos();
 </script>
 
 </body>
 </html>
+
+
+
 
 
 
