--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@ body {
   min-height:100vh;
 }
 
+.sidebar button { 
+  width:100%; 
+  padding:10px; 
+  margin-top:20px; 
+  border:none; 
+  border-radius:6px; 
+  background:#0d47a1; 
+  color:#fff; 
+  cursor:pointer; 
+  font-weight:bold;
+}
+
+/* تغيير لون زر "إضافة فيديو جديد" فقط */
+#showFormBtn {
+  background-color: #e91e63;
+  color: #fff;
+}
+#showFormBtn:hover { background-color: #d81b60; }
+
 /* Sidebar */
 .sidebar {
   width: 250px;
@@ -32,22 +51,6 @@ body {
 .sidebar h2 { color:#1976d2; margin-bottom:20px; font-size:1.6rem; border-bottom:2px solid #1976d2; padding-bottom:5px; }
 .sidebar a { display:block; color:#fff; text-decoration:none; margin:10px 0; transition: color 0.3s ease; }
 .sidebar a:hover { color:#1976d2; }
-.sidebar button { 
-  width:100%; 
-  padding:10px; 
-  margin-top:20px; 
-  border:none; 
-  border-radius:6px; 
-  background:#e91e63; 
-  color:#fff; 
-  cursor:pointer; 
-  font-weight:bold;
-}
-.sidebar button:hover { background:#d81b60; }
-
-/* زر خروج الأدمين */
-#logoutAdminBtn { display:none; background:#ff5722; }
-#logoutAdminBtn:hover { background:#e64a19; }
 
 /* Main content */
 main { flex-grow:1; padding:20px 40px; max-width:1000px; margin:auto; }
@@ -66,9 +69,24 @@ header {
   box-shadow: 0 8px 25px rgba(0,0,0,0.2);
   border: 2px solid #1976d2;
 }
-header img { height:140px; width:auto; border-radius:12px; border:3px solid #fff; box-shadow: 0 4px 15px rgba(0,0,0,0.15); }
-header div h1 { font-size:2.8rem; color:#fff; margin-bottom:8px; text-shadow: 1px 1px 4px rgba(0,0,0,0.4); }
-header div p { font-size:1.3rem; color:#e0f7fa; text-shadow: 1px 1px 3px rgba(0,0,0,0.3); }
+header img {
+  height:140px;
+  width:auto;
+  border-radius:12px;
+  border:3px solid #fff;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+}
+header div h1 {
+  font-size:2.8rem;
+  color:#fff;
+  margin-bottom:8px;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+}
+header div p {
+  font-size:1.3rem;
+  color:#e0f7fa;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+}
 
 /* Sections */
 section { margin-bottom:50px; }
@@ -84,21 +102,30 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
   box-shadow: 0 6px 15px rgba(0,0,0,0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.videoBox:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 12px 25px rgba(0,0,0,0.2);
-}
+.videoBox:hover { transform: translateY(-5px); box-shadow: 0 12px 25px rgba(0,0,0,0.2); }
 .videoBox iframe { width:100%; height:200px; border-radius:10px; }
 
 /* Admin Buttons */
 .videoButtons { display:flex; justify-content:center; gap:10px; margin-top:5px; }
-.videoButtons button { padding:5px 10px; border:none; border-radius:5px; cursor:pointer; font-size:0.8rem; }
+.videoButtons button {
+  padding:5px 10px;
+  border:none;
+  border-radius:5px;
+  cursor:pointer;
+  font-size:0.8rem;
+}
 .deleteBtn { background:red; color:#fff; }
 .editBtn { background:#1976d2; color:#fff; }
 
 /* PDF Resources */
 .resources { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px,1fr)); gap:20px; }
-.pdfBox { background: #d0e8ff; padding:15px; border-radius:12px; box-shadow: 0 6px 15px rgba(0,0,0,0.1); text-align:center; }
+.pdfBox {
+  background: #d0e8ff;
+  padding:15px;
+  border-radius:12px;
+  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+  text-align:center;
+}
 .pdfBox h3 { color:#0d47a1; margin-bottom:8px; font-size:1.1rem; }
 .pdfBox a { display:inline-block; padding:8px 12px; background:#1976d2; color:#fff; border-radius:6px; text-decoration:none; transition: background 0.3s; }
 .pdfBox a:hover { background:#0b3d91; }
@@ -107,13 +134,32 @@ section h2 { color: #1976d2; margin-bottom:20px; font-size:1.8rem; border-bottom
 footer { background: #1e1e1e; color: #fff; text-align:center; padding:25px 20px; font-size:0.9rem; }
 footer a { color:#1976d2; text-decoration:none; }
 
-/* Form إضافة فيديو */
-#videoForm { display:none; flex-direction:column; gap:10px; margin-top:15px; }
+/* Form لإضافة فيديو */
+#videoForm { display:flex; flex-direction:column; gap:10px; margin-top:15px; }
 #videoForm input { padding:8px 10px; border-radius:5px; border:1px solid #ccc; width:100%; }
 #videoForm button { padding:8px 10px; border:none; border-radius:5px; background:#0d47a1; color:#fff; cursor:pointer; }
 
 /* Load More Button */
-#loadMoreBtn { display:block; margin:20px auto 50px; padding:10px 20px; border:none; border-radius:6px; background:#1976d2; color:#fff; font-weight:bold; cursor:pointer; font-size:1rem; }
+#loadMoreBtn {
+  display:block;
+  margin:20px auto 50px;
+  padding:10px 20px;
+  border:none;
+  border-radius:6px;
+  background:#1976d2;
+  color:#fff;
+  font-weight:bold;
+  cursor:pointer;
+  font-size:1rem;
+}
+
+/* Logout Button */
+#logoutAdminBtn {
+  display:none;
+  margin-top:10px;
+  background:#f44336;
+}
+#logoutAdminBtn:hover { background:#d32f2f; }
 
 /* Responsive */
 @media(max-width:992px){
@@ -134,7 +180,7 @@ footer a { color:#1976d2; text-decoration:none; }
   <a href="#pdfs">PDF</a>
   <a href="#contact">Contact Us</a>
 
-  <!-- زر إضافة فيديو -->
+  <!-- زر لإظهار الفورم لإضافة فيديو -->
   <button id="showFormBtn">إضافة فيديو جديد</button>
 
   <!-- زر خروج الأدمين -->
@@ -159,7 +205,7 @@ footer a { color:#1976d2; text-decoration:none; }
 
 <section id="about">
   <h2>About This Website</h2>
-  <p>This website teaches <strong>Egyptian Spoken Arabic</strong> through engaging videos and downloadable PDFs. Learn practical phrases, pronunciation, and everyday conversations, suitable for beginners and advanced learners alike.</p>
+  <p>This website teaches <strong>Egyptian Spoken Arabic</strong> through engaging videos and downloadable PDFs. Learn practical phrases, pronunciation, and everyday conversations, suitable for beginners and advanced learners alike..</p>
 </section>
 
 <section id="videos">
@@ -184,7 +230,7 @@ footer a { color:#1976d2; text-decoration:none; }
 
 <section id="contact">
   <h2>Contact Us</h2>
-  <p>YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br/>
+  <p>YouTube Channel: <a href="https://www.youtube.com/@SpokenArabicNow/featured" target="_blank">Spoken Arabic Now</a><br />
   Email: spokenarabicnow@gmail.com</p>
 </section>
 
@@ -193,8 +239,8 @@ footer a { color:#1976d2; text-decoration:none; }
 </footer>
 
 <script>
-const ADMIN_PASSWORD = "1234";
-let isAdmin = sessionStorage.getItem("isAdmin") === "true";
+const ADMIN_PASSWORD = "1234"; // كلمة المرور
+let isAdmin = sessionStorage.getItem("isAdmin") === "true"; // حفظ حالة الأدمين ضمن الجلسة
 
 const showFormBtn = document.getElementById('showFormBtn');
 const logoutAdminBtn = document.getElementById('logoutAdminBtn');
@@ -208,21 +254,10 @@ const loadMoreBtn = document.getElementById('loadMoreBtn');
 let videos = JSON.parse(localStorage.getItem('videos')) || [];
 let visibleCount = 6;
 
-// تحديث واجهة الأدمين
-function updateAdminUI() {
-  if(isAdmin){
-    showFormBtn.style.display = "block";
-    logoutAdminBtn.style.display = "block";
-  } else {
-    showFormBtn.style.display = "none";
-    logoutAdminBtn.style.display = "none";
-    videoForm.style.display = "none";
-  }
-}
-
-// إنشاء عنصر الفيديو
+// دالة إنشاء عنصر فيديو
 function createVideoElement(video, index) {
   const container = document.createElement('div');
+
   const title = document.createElement('div');
   title.classList.add('videoTitle');
   title.textContent = video.title;
@@ -274,19 +309,27 @@ function createVideoElement(video, index) {
 // عرض الفيديوهات
 function renderVideos() {
   videoList.innerHTML = "";
-  videos.slice(0, visibleCount).forEach((v,i)=>{
-    videoList.appendChild(createVideoElement(v,i));
-  });
+  videos.slice(0, visibleCount).forEach((v,i)=> videoList.appendChild(createVideoElement(v,i)));
   loadMoreBtn.style.display = visibleCount >= videos.length ? 'none' : 'block';
 }
 
 // تحميل المزيد
-loadMoreBtn.addEventListener('click', ()=> {
-  visibleCount += 6;
-  renderVideos();
-});
+loadMoreBtn.addEventListener('click', ()=> { visibleCount += 6; renderVideos(); });
 
-// زر إضافة فيديو
+// تحديث واجهة الأدمين
+function updateAdminUI() {
+  if(isAdmin){
+    showFormBtn.style.display = "block";
+    logoutAdminBtn.style.display = "block";
+    videoForm.style.display = "flex";
+  } else {
+    showFormBtn.style.display = "block";
+    logoutAdminBtn.style.display = "none";
+    videoForm.style.display = "none";
+  }
+}
+
+// زر إضافة فيديو - يطلب كلمة المرور إذا لم يكن الأدمين
 showFormBtn.addEventListener('click', () => {
   if(!isAdmin){
     const pass = prompt("أدخل كلمة مرور الأدمين:");
@@ -304,9 +347,9 @@ showFormBtn.addEventListener('click', () => {
 });
 
 // زر خروج الأدمين
-logoutAdminBtn.addEventListener('click', ()=>{
+logoutAdminBtn.addEventListener('click', () => {
   isAdmin = false;
-  sessionStorage.removeItem("isAdmin");
+  sessionStorage.setItem("isAdmin","false");
   updateAdminUI();
   renderVideos();
 });
@@ -326,18 +369,21 @@ addVideoBtn.addEventListener('click', () => {
   const newVideo = { title, url, id: videoId };
   videos.push(newVideo);
   localStorage.setItem('videos', JSON.stringify(videos));
+
   videoTitleInput.value = "";
   videoURLInput.value = "";
   renderVideos();
 });
 
-// تهيئة الصفحة
+// تحميل الفيديوهات عند بدء الصفحة
 updateAdminUI();
 renderVideos();
 </script>
 
 </body>
 </html>
+
+
 
 
 
